<resources>
    <string name="app_name">TreePoint</string>
    <string name="oops_message">Oops, something went wrong…</string>
    <string name="sorry_message">We are deeply sorry. Error report sent automatically, it will be fixed as soon as we can.</string>
    <string name="sad_tree">Sad tree</string>
    <string name="please_restart_application_and_try_again">Please restart application and try again</string>
    <string name="attribution">Tree, sapling, apple icons made by <a href="https://www.freepik.com">Freepik</a> from <a href="https://www.flaticon.com">Flaticon.</a></string>
    <string name="forest">forest</string>
    <string name="username">Username</string>
    <string name="pick_a_username">Pick a username</string>
    <string name="your_username_will_be_public_for_all_users_to_see">Your username will be public for all users to see</string>
    <string name="register">Register</string>
    <string name="username_exists">Sorry, that username already exists</string>
    <string name="sapling">sapling</string>
    <string name="invalid_username">Username must contain 6–18 letter/number character</string>
    <string name="select_the_fruiting_period">Select the fruiting period</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="fruition_single_month">Fruition in %s</string>
    <string name="fruition_months_range">Fruition in %s - %s</string>
    <string name="select_fruiting_season">Select fruiting season</string>
    <string name="comment">Comment</string>
    <string name="create_tree_point">create TreePoint</string>
    <string name="creator">Creator:</string>
    <string name="verifiedLabel">Verified:</string>
    <string name="verified">verified</string>
    <string name="not_verified">not verified</string>
    <string name="tree_point_created">TreePoint created</string>
    <string name="about">About</string>
    <string name="creators">Creators:</string>
    <string name="creators_list">Vsevolod Salenko - Developer \nGennady Demchenko - Product owner</string>
    <string name="credits">Credits:</string>
    <string name="attribution_label">Attribution:</string>
    <string name="project_sources">Project sources:</string>
    <string name="sources_link">https://github.com/SuriousCompany/TreePointPublic</string>
    <string name="photos">Photos</string>
    <string name="credits_placeholder">%d credits</string>
    <string name="auto">Auto</string>
    <string name="never">Never</string>
    <string name="always">Always</string>
    <string name="health_assessment_mode">Health assessment mode:</string>
    <string name="identify">identify</string>
    <string name="got_credits">You got %.2f credits for the new plants discovering! Now you have %.2f credits.</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>