<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="treeTypesAdapter"
            type="company.surious.treepoint.ui.common.fragments.create_tree_point.TreeTypeSpinnerAdapter" />

        <variable
            name="treeTypes"
            type="androidx.lifecycle.LiveData&lt;java.util.List&lt;company.surious.domain.entities.TreeType>>" />

        <variable
            name="isLoading"
            type="androidx.lifecycle.LiveData&lt;Boolean>" />

        <variable
            name="eventHandler"
            type="company.surious.treepoint.ui.common.fragments.create_tree_point.CreateTreePointFragment.CreateTreePointFragmentEventHandler" />

        <variable
            name="fruitingRange"
            type="androidx.lifecycle.LiveData&lt;kotlin.Pair&lt;Integer, Integer>>" />

        <variable
            name="comment"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

        <import type="company.surious.domain.entities.TreeType" />

        <import type="kotlin.Pair" />

        <import type="company.surious.treepoint.ui.common.fragments.create_tree_point.FruitingRangeTextHelper" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.common.fragments.create_tree_point.CreateTreePointFragment">

        <include
            layout="@layout/layout_loading"
            app:visible="@{isLoading}"
            tools:visibility="invisible" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/createTreePointMapView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/treeTypesSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/treeTypesSpinner"
            spinnerAdapter="@{treeTypesAdapter}"
            spinnerData="@{treeTypes}"
            spinnerSelectionListener="@{(treeType) -> eventHandler.onTreeTypeSelected((TreeType) treeType)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/selectFruitingSeasonTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/backgroundColor"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_height="48dp" />

        <TextView
            android:id="@+id/selectFruitingSeasonTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:onClick="@{()->eventHandler.onSelectFruitingSeasonClicked()}"
            android:padding="8dp"
            android:text="@{FruitingRangeTextHelper.INSTANCE.getFruitingRangeText(context, fruitingRange)}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/commentTextInputLayout"
            app:layout_constraintEnd_toStartOf="@id/photoTextView"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/select_fruiting_season" />

        <TextView
            android:id="@+id/photoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:onClick="@{()->eventHandler.onPhotoClicked()}"
            android:padding="8dp"
            android:text="@string/photo"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/commentTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/selectFruitingSeasonTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:hint="@string/comment"
            android:textColorHint="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/createTreePointButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|start"
                android:lines="3"
                android:text="@={comment}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createTreePointButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/secondaryColor"
            android:onClick="@{()->eventHandler.onCreateTreePointButtonClicked()}"
            android:text="@string/create_tree_point"
            android:textColor="@color/secondaryOnColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>